--- a/features/src/main/res/layout/hotel_view.xml
+++ b/features/src/main/res/layout/hotel_view.xml
@@ -8,11 +8,11 @@
 
     <TextView
         android:id="@+id/tv_header"
-        android:layout_width="66dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/test_textview"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
