--- a/features/src/main/res/layout/flight_view.xml
+++ b/features/src/main/res/layout/flight_view.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.airbnb.epoxy.EpoxyRecyclerView
         android:id="@+id/rv_flights"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -18,6 +18,7 @@
         android:id="@+id/btn_nextday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
