--- a/features/src/main/res/layout/view_holder_flight_view.xml
+++ b/features/src/main/res/layout/view_holder_flight_view.xml
@@ -9,6 +9,14 @@
             type="String" />
 
         <variable
+            name="cost"
+            type="Integer" />
+
+        <variable
+            name="isSelected"
+            type="Boolean" />
+
+        <variable
             name="onClick"
             type="android.view.View.OnClickListener" />
     </data>
@@ -16,6 +24,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@{isSelected ? @drawable/bg_selected_hotel : null}"
         android:onClick="@{onClick}">
 
         <TextView
@@ -25,12 +34,23 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
             android:text="@{name}"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@string/test_flight" />
+
+        <TextView
+            android:id="@+id/tv_cost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            tools:text="@string/test_amount"
+            app:amount="@{cost}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
