--- a/features/src/main/res/layout/view_holder_summary_item.xml
+++ b/features/src/main/res/layout/view_holder_summary_item.xml
@@ -16,7 +16,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{cancelClick}">
 
 
         <TextView
